--- a/client/views/partials/drivers/edit-driver.html
+++ b/client/views/partials/drivers/edit-driver.html
@@ -45,7 +45,7 @@
 
                     <div class="col-xs-12">
                         <date-picker id="licenseValidity" ng-model="driver.licenseValidity"
-                                     placeholder="'License Validity'"></date-picker>
+                                     placeholder="'License Validity'" class="'custom-form-control'"></date-picker>
                     </div>
                 </div>
 
@@ -76,7 +76,7 @@
             </div>
 
                 <div class="col-xs-12">
-                    <div class="col-xs-5 col-xs-push-7 mtb-25">
+                    <div class="col-xs-4 mtb-25 sub-can">
                         <button type="submit" class="btn can" ng-click="cancel()">Cancel</button>
                         <button type="submit" class="btn can  last" ng-click="addOrSaveDriver()">Submit</button>
                     </div>
