--- a/client/views/partials/reports/dashboard.html
+++ b/client/views/partials/reports/dashboard.html
@@ -75,19 +75,19 @@
                 </div>
             </div>
             <ul class="col-xs-12 list-inline" ng-class="{'costactivated':activated==='6'}">
-                <li><a href="#">{{totals.expiring.fitnessExpiryCount}}</a>
+                <li>{{totals.expiring.fitnessExpiryCount}}
                     <small>Fitness</small>
                 </li>
-                <li><a href="#">{{totals.expiring.permitExpiryCount}}</a>
+                <li>{{totals.expiring.permitExpiryCount}}
                     <small>Permit</small>
                 </li>
-                <li><a href="#">{{totals.expiring.taxExpiryCount}}</a>
+                <li>{{totals.expiring.taxExpiryCount}}
                     <small>Tax</small>
                 </li>
-                <li><a href="#">{{totals.expiring.insuranceExpiryCount}}</a>
+                <li>{{totals.expiring.insuranceExpiryCount}}
                     <small>Insurance</small>
                 </li>
-                <li><a href="#">{{totals.expiring.pollutionExpiryCount}}</a>
+                <li>{{totals.expiring.pollutionExpiryCount}}
                     <small>Pollutions</small>
                 </li>
             </ul>
