--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -45,8 +45,8 @@
 
 .bot-arrow {
     position: absolute;
-    right: 20px;
-    top: 5px;
+    right: 15px;
+    top: 3px;
     font-size: 25px;
     cursor: pointer;
 }
@@ -94,7 +94,7 @@ h1, h2, h3, h4, h5, h6 {
 
 body {
     font-family: Gotham-Light;
-    font-size: 15px;
+    font-size: 14px;
     background-color: #f5f5f5;
     color: #838993;
 }
@@ -192,6 +192,48 @@ body {
     -webkit-box-shadow: none !important;
     box-shadow: none !important;
 }
+.textfield{
+    box-shadow: none;
+    border-radius: 0 !important;
+    padding: 6px 10px !important;
+    height: 40px;
+    background: transparent !important;
+    border-right: 0;
+}
+.trucksfield{
+    border:1px solid #ccc !important;
+}
+.report-expense li:nth-last-child(2){
+    border-right: 1px solid #ccc;
+}
+.report-expense{
+    display: block;
+    margin: 0;
+    padding: 0;
+}
+.go{
+    display: block;
+    background: #1d232f;
+    height: 40px;
+    line-height: 20px;
+    text-align: center;
+    color: #fff;
+    font-size: 18px;
+    width: 50px;
+    border-radius: 0;
+    font-weight: bold;
+}
+.mailImage{
+    background-color: #ececec;
+    padding: 6px !important;
+
+}
+.mailDownload{
+    display: block;
+    padding: 0;
+    margin: 0;
+    float: right;
+}
 
 .remember {
     float: left;
@@ -216,7 +258,8 @@ body {
     color: #fff;
     border-radius: 0;
     float: right;
-    width: 30%;
+    font-weight: bold;
+    width: 20%;
     height: 40px;
 }
 
@@ -242,10 +285,11 @@ body {
     display: block;
     width: 100%;
     padding: 8px 15px;
+    color: #000;
 
 }
 
-.left-menu-anchor:hover {
+.left-menu-anchor:hover, .left-menu-anchor:focus {
     text-decoration: none;
     color: #000;
 
@@ -465,7 +509,7 @@ body {
     padding: 0 6px !important;
 }
 
-.stylish-input-group .glyphicon-search {
+.stylish-input-group .fa {
     font-size: 25px;
     color: #fff;
 }
@@ -579,13 +623,19 @@ body {
     font-size: 15px;
 }
 
-.reports-panel a:focus, .reports-panel a:hover {
+.reports-panel a:focus, .reports-panel a:hover, .reports-panel a:active {
     color: #fff !important;
 }
 
 .activated {
     background-color: #000;
     color: #fff !important;
+    text-decoration: none;
+}
+.activeProfileTab {
+    background-color: #000;
+    color: #fff !important;
+    text-decoration: none;
 }
 
 .h3activated {
@@ -754,6 +804,10 @@ body {
     background: #000;
     color: #fff;
     border: transparent 1px solid;
+    text-decoration: none;
+}
+.top-block ul li a:focus{
+    text-decoration: none;
 }
 
 .mdl-block {
@@ -805,7 +859,7 @@ body {
 }
 
 .can:hover {
-    background: #e93a14;
+    background-color: #e93a14 !important;
     color: #fff;
     border: transparent 1px solid;
 }
@@ -816,6 +870,18 @@ body {
 
 .can.last {
     margin: 0 0 0 0 !important;
+    background-color: #9d9d9d;
+    color: #fff;
+    border-color: #9d9d9d;
+}
+.sub-can{
+    float: right;
+    margin-right: 15px;
+}
+.add-group {
+    background-color: #e93a14 !important;
+    color: #fff !important;
+    font-weight: bold;
 }
 
 .add-image {
@@ -843,9 +909,12 @@ body {
 .date-pick {
     cursor: pointer;
     position: absolute;
-    right: 0;
+    right: 5px;
     top: 8px;
 
+}
+.checkbox, .radio{
+    margin-bottom: 0 !important;
 }
 
 .checkbox label:after,
@@ -884,6 +953,7 @@ body {
 .cr-icon:before {
     content: "\f00c" !important;
     font-size: 20px;
+    color: #000;
 }
 
 .rad-icon:before {
@@ -935,6 +1005,105 @@ body {
 .trip-share label {
     padding-left: 0 !important;
 }
+.db-expenses{
+    display: block;
+    margin: 10px auto;
+}
+.db-expenses p{
+    line-height: 40px;
+    font-size: 16px;
+    font-family: Gotham-Book;
+}
+.filterFromDate, .filterToDate{
+    width: 20%;
+    float: left;
+    padding: 0 !important;
+}
+select{
+    -webkit-appearance: none;
+}
+.reset-pass{
+    display: block;
+}
+.reset-pass h3{
+    font-size: 18px;
+    font-weight: bold;
+    padding: 0 15px 0;
+}
+.edit-profile{
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+.erp-gps{
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+}
+.erp-gps label{
+    line-height: 30px;
+}
+.erp{
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+}
+.gps{
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+}
+/*------------------Input Label Styling-----------*/
+
+
+.styling-input-list{
+    position: relative;
+    z-index: 10;
+}
+.focus-effect-for-input{
+    position: absolute;
+    top: 13px;
+    left: 0px;
+    color:#989898;
+    font-size: 15px;
+    font-weight:lighter;
+    z-index: -1;
+}
+
+.custom-form-control{
+    background-color: transparent !important;
+    z-index: 10 !important;
+}
+
+.custom-form-control:not([disabled]):focus~.focus-effect-for-input{
+    /*whsOnd:not([disabled]):focus~.AxOyFc*/
+    transform: scale(.9) translateY(-20px);
+
+    left:0;
+    transition: all 0.5s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out; /** Chrome & Safari **/
+    -moz-transition: all 0.5s ease-in-out; /** Firefox **/
+    -o-transition: all 0.5s ease-in-out; /** Opera **/
+}
+
+
+
+.ng-not-empty+.focus-effect-for-input{
+    transform: scale(.9) translateY(-20px);
+    left:0;
+    transition: all 0.5s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out; /** Chrome & Safari **/
+    -moz-transition: all 0.5s ease-in-out; /** Firefox **/
+    -o-transition: all 0.5s ease-in-out; /** Opera **/
+}
+
+/*sign-up input css*/
+
+.top_sign .focus-effect-for-input{
+    color:#467371;
+}
+
+/*------------------Input Label Styling end-----------*/
 
 /* -------------- Responsive Here --------------*/
 
@@ -1045,6 +1214,4 @@ body {
     }
 
 }
-
-
 
