--- a/client/views/index.html
+++ b/client/views/index.html
@@ -61,9 +61,9 @@
                         <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#"></a></li>
-                        <li><a href="#" ui-sref="profile">My Profile</a></li>
-                         <li><a href="#">My Groups</a></li>
-                         <li><a href="#">Add Group</a></li>
+                        <li><a href="#" ui-sref="myProfile">My Profile</a></li>
+                         <li><a href="#"ui-sref="myGroup">My Groups</a></li>
+                         <li><a href="#" ui-sref="addGroup">Add Group</a></li>
                          <li><a href="#" ng-click="logout()">Logout</a></li>
 
                     </ul>
