--- a/client/views/partials/expenses/expensesEdit.html
+++ b/client/views/partials/expenses/expensesEdit.html
@@ -6,7 +6,7 @@
                 <div class="form-group col-xs-12">
                     <div class="col-xs-12">
                         <date-picker id="date" ban-future="'banFutureDate'"
-                                     ng-model="expenseDetails.date" placeholder="'Date*'"></date-picker>
+                                     ng-model="expenseDetails.date" placeholder="'Date*'" class="'custom-form-control'"></date-picker>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
@@ -95,7 +95,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12">
-                    <div class="col-xs-5 col-xs-push-7 mtb-25">
+                    <div class="col-xs-4 mtb-25 sub-can">
                         <button type="submit" class="btn can" ng-click="cancel()">Cancel</button>
                         <button type="submit" class="btn can last" ng-click="AddorUpdateExpense()">Submit</button>
                     </div>
