--- a/client/views/partials/party/party-list.html
+++ b/client/views/partials/party/party-list.html
@@ -1,21 +1,24 @@
 <div class="main-right col-xs-12" ng-controller="PartyListController">
     <div class="col-xs-12 pall-zero mb-10">
         <div class="col-sm-3 pall-zero"><h3>Parties</h3></div>
-        <div class="col-sm-6">
+        <div class="col-xs-8 col-xs-push-1 pall-zero">
+        <div class="col-sm-8">
             <div class="input-group stylish-input-group">
                 <input type="text" class="form-control" placeholder="Search">
                 <span class="input-group-addon">
                         <button type="submit">
-                            <span class="glyphicon glyphicon-search"></span>
+                              <i class="fa fa-search sear" aria-hidden="true"></i>
                         </button>
                     </span>
             </div>
         </div>
-        <div class="col-sm-3 pall-zero">
+        <div class="col-sm-4 pall-zero pos-relative">
+            <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
             <select class="form-control">
                 <option value="" selected>All Vehicles</option>
-                <option ng-repeat="parties in currentPageOfParties">{{trips.attrs.truckName}}</option>
+                <option ng-repeat="parties in currentPageOfParties">{{parties.name}}</option>
             </select>
+        </div>
         </div>
     </div>
 
@@ -55,7 +58,7 @@
 
     <div class="add-image pull-right">
         <figure>
-            <a href="#" ng-click="goToEditPartyPage()"><img src="images/Add_Parties.png"></a>
+            <a href="#" ng-click="goToEditPartyPage()"><img src="images/Add_Parties.png" alt="Add Party" title="Add Party"></a>
         </figure>
     </div>
 
