--- a/client/views/partials/payments/paymentsReceived.html
+++ b/client/views/partials/payments/paymentsReceived.html
@@ -2,21 +2,24 @@
         <div class="main-right col-xs-12" ng-controller="PaymentsCtrl">
             <div class="col-xs-12 pall-zero mb-10">
                 <div class="col-sm-3 pall-zero"><h3>Payments</h3></div>
-                <div class="col-sm-6">
+                <div class="col-xs-8 col-xs-push-1 pall-zero">
+                <div class="col-sm-8">
                     <div class="input-group stylish-input-group">
                         <input type="text" class="form-control" placeholder="Search">
                         <span class="input-group-addon">
                         <button type="submit">
-                            <span class="glyphicon glyphicon-search"></span>
+                               <i class="fa fa-search sear" aria-hidden="true"></i>
                         </button>
                     </span>
                     </div>
                 </div>
-                <div class="col-sm-3 pall-zero">
+                <div class="col-sm-4 pall-zero pos-relative">
+                    <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
                     <select class="form-control">
-                        <option value="" selected>All Vehicles</option>
-                        <option ng-repeat="parties in currentPageOfParties">{{trips.attrs.truckName}}</option>
+                        <option value="" selected>Party Name</option>
+                        <option ng-repeat="payments in currentPageOfPayments">{{payments.attrs.partyName}}</option>
                     </select>
+                </div>
                 </div>
             </div>
             <!--<div class="toolbar-button-div pull-right mb-10">-->
@@ -54,7 +57,7 @@
             </table>
             <div class="add-image pull-right">
                 <figure>
-                    <a href="#" ng-click="goToEditPaymentsPage()"><img src="images/Add_Payments.png"></a>
+                    <a href="#" ng-click="goToEditPaymentsPage()"><img src="images/Add_Payments.png" alt="Add Payment" title="Add Payment"></a>
                 </figure>
             </div>
         </div>
