--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -6,7 +6,7 @@
                 <div class="form-group col-xs-12">
                     <div class="col-xs-12">
                         <date-picker id="permitExpiry" ng-model="trip.date" past-present="'pastPresentDate'"
-                                     placeholder="'Trip Date*'">
+                                     placeholder="'Trip Date*'" class="'custom-form-control'">
                         </date-picker>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                 </div>
             </div>
             <div class="col-xs-12">
-                <div class="col-xs-5 col-xs-push-7 mtb-25">
+                <div class="col-xs-4 mtb-25 sub-can">
                     <button type="submit" class="btn can" ng-click="cancel()">Cancel</button>
                     <button type="submit" class="btn can last" ng-click="addOrUpdateTrip()">Submit</button>
                 </div>
