--- a/client/views/partials/trips/tripsList.html
+++ b/client/views/partials/trips/tripsList.html
@@ -3,21 +3,24 @@
 
             <div class="col-xs-12 pall-zero mb-10">
                 <div class="col-sm-3 pall-zero"><h3>Trips</h3></div>
-                <div class="col-sm-6">
+                <div class="col-xs-8 col-xs-push-1 pall-zero">
+                <div class="col-sm-8">
                     <div class="input-group stylish-input-group">
                         <input type="text" class="form-control" placeholder="Search">
                         <span class="input-group-addon">
                         <button type="submit">
-                            <span class="glyphicon glyphicon-search"></span>
+                                <i class="fa fa-search sear" aria-hidden="true"></i>
                         </button>
                     </span>
                     </div>
                 </div>
-                <div class="col-sm-3 pall-zero">
+                <div class="col-sm-4 pall-zero pos-relative">
+                    <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
                     <select class="form-control">
                         <option value="" selected>All Vehicles</option>
                         <option ng-repeat="trips in currentPageOfTrips">{{trips.attrs.truckName}}</option>
                     </select>
+                </div>
                 </div>
             </div>
 
@@ -61,7 +64,7 @@
             </table>
             <div class="add-image pull-right">
                 <figure>
-                    <a href="#" ng-click="goToEditTripPage()"><img src="images/Add_Vehicle.png"></a>
+                    <a href="#" ng-click="goToEditTripPage()"><img src="images/Add_Vehicle.png" alt="Add Trip" title="Add Trip"></a>
                 </figure>
             </div>
 
