--- a/client/views/partials/trucks/trucks-edit.html
+++ b/client/views/partials/trucks/trucks-edit.html
@@ -3,15 +3,15 @@
         <h2 class="title-name ">{{pageTitle}}</h2>
         <div class="col-sm-6 col-xs-12 mt-10">
             <div class="form-group col-xs-12">
-                <div class="col-xs-12">
-                    <input type="text" class="form-control custom-form-control" ng-model="truck.registrationNo"
-                           placeholder="Truck Number*"/>
+                <div class="col-xs-12 styling-input-list">
+                    <input type="text" class="form-control custom-form-control" ng-model="truck.registrationNo"/>
+                    <label class="focus-effect-for-input" aria-hidden="true">Truck Number</label>
                 </div>
             </div>
             <div class="form-group col-xs-12">
-                <div class="col-xs-12">
-                    <input type="text" class="form-control custom-form-control" ng-model="truck.truckType"
-                           placeholder="Truck Type*"/>
+                <div class="col-xs-12 styling-input-list">
+                    <input type="text" class="form-control custom-form-control" ng-model="truck.truckType"/>
+                    <label class="focus-effect-for-input" aria-hidden="true">Truck Type</label>
                 </div>
             </div>
             <div class="form-group col-xs-12">
@@ -46,32 +46,32 @@
                 <div class="col-xs-12">
 
                     <date-picker id="fitnessExpiry" ng-model="truck.fitnessExpiry"
-                                 placeholder="'Fitness Due Expiry Date*'"></date-picker>
+                                 placeholder="'Fitness Due Expiry Date*'" class="'custom-form-control'"></date-picker>
                 </div>
             </div>
             <div class="form-group col-xs-12">
                 <div class="col-xs-12">
                     <date-picker id="permitExpiry" ng-model="truck.permitExpiry"
-                                 placeholder="'Permit Due Expiry Date*'"></date-picker>
+                                 placeholder="'Permit Due Expiry Date*'" class="'custom-form-control'"></date-picker>
                 </div>
             </div>
             <div class="form-group col-xs-12">
 
                 <div class="col-xs-12">
                     <date-picker id="insuranceExpiry" ng-model="truck.insuranceExpiry"
-                                 placeholder="'Insurance Due Expiry Date*'"></date-picker>
+                                 placeholder="'Insurance Due Expiry Date*'" class="'custom-form-control'"></date-picker>
                 </div>
             </div>
             <div class="form-group col-xs-12">
                 <div class="col-xs-12">
                     <date-picker id="pollutionExpiry" ng-model="truck.pollutionExpiry"
-                                 placeholder="'Pollution Due Expiry Date*'"></date-picker>
+                                 placeholder="'Pollution Due Expiry Date*'" class="'custom-form-control'"></date-picker>
                 </div>
             </div>
             <div class="form-group col-xs-12">
                 <div class="col-xs-12">
                     <date-picker id="taxDueDate" ng-model="truck.taxDueDate"
-                                 placeholder="'Tax Due Expiry Date*'"></date-picker>
+                                 placeholder="'Tax Due Expiry Date*'" class="'custom-form-control'"></date-picker>
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
             </div>
         </div>
         <div class="col-xs-12">
-            <div class="col-xs-5 col-xs-push-7 mtb-25">
+            <div class="col-xs-4 mtb-25 sub-can">
                 <button type="submit" class="btn can" ng-click="goToTrucksPage()">Cancel</button>
                 <button type="submit" class="btn can  last" ng-click="addOrUpdateTruck()">Submit</button>
             </div>
