--- a/client/views/templates/expenseByVehicle.html
+++ b/client/views/templates/expenseByVehicle.html
@@ -1,9 +1,62 @@
 <div class="main-temp col-xs-12 mt-20">
-    <h3>Expenses</h3>
-    <div class="toolbar-button-div pull-right mb-10">
-        &nbsp;
+
+
+    <div class="col-xs-12 pall-zero db-expenses">
+        <div class="col-xs-3 pall-zero"><p>Total Expenses</p></div>
+        <div class="col-xs-9 pall-zero">
+            <ul class="list-inline report-expense">
+                    <li class="filterFromDate">
+                    <date-picker ng-model="filters.fromDate" past-present="'pastPresentDate'" class="'textfield'">
+                    </date-picker>
+                </li>
+                <li class="filterToDate">
+                    <date-picker ng-model="filters.toDate" ban-future="'banFutureDate'" class="'textfield'"></date-picker>
+                </li>
+                <li class="col-xs-3 pall-zero pos-relative">
+                    <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+                    <input type="text" ng-model="filters.regNumber"
+                           uib-typeahead="totalExpensesbyVehicle.regNumber for totalExpensesbyVehicle in totalExpensesbyVehicle | filter:$viewValue"
+                           class="form-control textfield" typeahead-min-length="1"
+                           typeahead-on-select="selectTruckId($item)"
+                           typeahead-select-on-exact="true" placeholder="Registration Num"
+                           typeahead-no-results="noTrucks" autocomplete="false">
+                    <div ng-show="noTrucks">
+                        <i class="glyphicon glyphicon-remove red"></i>
+                        <span class="red"> No Results Found </span>
+                    </div>
+                </li>
+                <li class="col-xs-1">
+                    <button ng-click="validateFilters()" type="button" class="btn go">Go</button>
+                </li>
+            </ul>
+            <ul class="list-inline mailDownload">
+                <li>
+                    <button type="button" class="btn mailImage"><img src="images/Reports_Mail.png"></button>
+                </li>
+
+                <li>
+                    <button type="button" class="btn mailImage"><img src="images/Reports_Download.png"></button>
+                </li>
+            </ul>
+        </div>
     </div>
-    <table class="table table-bordered table-striped table-condensed table-hover">
+    <div class="col-xs-12">
+        <div>
+            <div class="alert alert-danger" role="alert" ng-show="filters.error.length">
+                <ul>
+                    <li ng-repeat="error in filters.error">{{error}}</li>
+                </ul>
+            </div>
+            <div class="alert alert-success" role="alert" ng-show="filters.success.length">
+                <ul>
+                    <li ng-repeat="success in filters.success">{{success}}</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
+  <!--  <table class="table table-bordered table-striped table-condensed table-hover">
         <tr style="text-align: center;">
             <td class="col-sm-2">
                 <date-picker ng-model="filters.fromDate" past-present="'pastPresentDate'">
@@ -27,60 +80,49 @@
             </td>
             <td class="col-sm-2">
                 <button ng-click="validateFilters()">
-                    Go</button></td>
-            <div>
-                <div class="alert alert-danger" role="alert" ng-show="filters.error.length">
-                    <ul>
-                        <li ng-repeat="error in filters.error">{{error}}</li>
-                    </ul>
-                </div>
-                <div class="alert alert-success" role="alert" ng-show="filters.success.length">
-                    <ul>
-                        <li ng-repeat="success in filters.success">{{success}}</li>
-                    </ul>
-                </div>
-            </div>
+                    Go
+                </button>
+            </td>
         </tr>
-    </table>
+    </table>-->
 
-<div class="main-temp col-xs-12">
-    <h3>Expenses</h3>
 
-    <table class="table table-bordered table-striped table-condensed table-hover" ng-table="expenseParams">
-        <tr ng-repeat="expensesByVehicle in totalExpensesbyVehicle" style="text-align: center;">
-            <td data-title="'Registration No'" sortable="'regNumber'" class="clickable-item col-sm-2">
-                <a href="#"
-                ng-click="gotoExpenseByVehicleId(expensesByVehicle.id, expensesByVehicle.regNumber)">
-                  {{expensesByVehicle.regNumber }}</a>
-            </td>
-            <td data-title="'Diesel'" sortable="'dieselExpense'" class="clickable-item col-sm-2">
-                {{ expensesByVehicle.exps[0].dieselExpense}}
-            </td>
-            <td data-title="'Toll'" sortable="'tollExpense'" class="clickable-item col-sm-2">
-                {{ expensesByVehicle.exps[0].tollExpense}}
-            </td>
 
-            <td data-title="'Maintenance'" sortable="'mExpense'" class="clickable-item col-sm-2">
-                {{ expensesByVehicle.exps[0].mExpense}}
-            </td>
-            
-            <td data-title="'Miscellaneous'" sortable="'misc'" class="clickable-item col-sm-2">
-                {{ expensesByVehicle.exps[0].misc}}
-            </td>
-           
-        </tr>
-        <tr ng-if="expensesByVehicle || expensesByVehicle.length === 0">
-            <td colspan="8">No Records exist.</td>
-        </tr>
-        <tr class="text-center">
-            <td><b>Total</b></td>
-            <td><b>{{totalExpenses.totalDieselExpense}}</b></td>
-            <td><b>{{totalExpenses.totaltollExpense}}</b></td>
-            <td><b>{{totalExpenses.totalmExpense}}</b></td>
-            <td><b>{{totalExpenses.totalmisc}}</b></td>
+        <table class="table table-bordered table-striped table-condensed table-hover" ng-table="expenseParams">
+            <tr ng-repeat="expensesByVehicle in totalExpensesbyVehicle" style="text-align: center;">
+                <td data-title="'Registration No'" sortable="'regNumber'" class="clickable-item col-sm-2">
+                    <a href="#"
+                       ng-click="gotoExpenseByVehicleId(expensesByVehicle.id, expensesByVehicle.regNumber)">
+                        {{expensesByVehicle.regNumber }}</a>
+                </td>
+                <td data-title="'Diesel'" sortable="'dieselExpense'" class="clickable-item col-sm-2">
+                    {{ expensesByVehicle.exps[0].dieselExpense}}
+                </td>
+                <td data-title="'Toll'" sortable="'tollExpense'" class="clickable-item col-sm-2">
+                    {{ expensesByVehicle.exps[0].tollExpense}}
+                </td>
 
-        </tr>
-    </table>
-</div>
+                <td data-title="'Maintenance'" sortable="'mExpense'" class="clickable-item col-sm-2">
+                    {{ expensesByVehicle.exps[0].mExpense}}
+                </td>
+
+                <td data-title="'Miscellaneous'" sortable="'misc'" class="clickable-item col-sm-2">
+                    {{ expensesByVehicle.exps[0].misc}}
+                </td>
+
+            </tr>
+            <tr ng-if="expensesByVehicle || expensesByVehicle.length === 0">
+                <td colspan="8">No Records exist.</td>
+            </tr>
+            <tr class="text-center">
+                <td><b>Total</b></td>
+                <td><b>{{totalExpenses.totalDieselExpense}}</b></td>
+                <td><b>{{totalExpenses.totaltollExpense}}</b></td>
+                <td><b>{{totalExpenses.totalmExpense}}</b></td>
+                <td><b>{{totalExpenses.totalmisc}}</b></td>
+
+            </tr>
+        </table>
+    </div>
 </div>
 
