--- a/client/views/templates/expiryTrucks.html
+++ b/client/views/templates/expiryTrucks.html
@@ -1,32 +1,61 @@
+<div class="main-temp col-xs-12 mt-20">
+    <div class="col-xs-12 pall-zero db-expenses">
+        <div class="col-xs-3 pall-zero"><p>Total Expiry</p></div>
+        <div class="col-xs-9 pall-zero">
+            <ul class="list-inline pull-right">
+                <li class="col-xs-6 pos-relative">
+                    <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
+                    <input type="text" ng-model="filters.regNumber"
+                           uib-typeahead="totalExpensesbyVehicle.regNumber for totalExpensesbyVehicle in totalExpensesbyVehicle | filter:$viewValue"
+                           class="form-control textfield trucksfield" typeahead-min-length="1"
+                           typeahead-on-select="selectTruckId($item)"
+                           typeahead-select-on-exact="true" placeholder="Registration Num"
+                           typeahead-no-results="noTrucks" autocomplete="false">
+                    <div ng-show="noTrucks">
+                        <i class="glyphicon glyphicon-remove red"></i>
+                        <span class="red"> No Results Found </span>
+                    </div>
+                </li>
+                <li class="col-xs-2">
+                    <button ng-click="validateFilters()" type="button" class="btn go">Go</button>
+                </li>
+                <li class="col-xs-2">
+                    <button type="button" class="btn mailImage"><img src="images/Reports_Mail.png"></button>
+                </li>
 
-        <div class="main-temp col-xs-12 mt-20">
-            <h3>Expiry Trucks</h3>
-            <!--<div class="toolbar-button-div pull-right mb-10">-->
-                <!--&nbsp;-->
-            <!--</div>-->
-            <table class="table table-bordered table-striped table-condensed table-hover" ng-table="paymentsParams">
-                <tr ng-repeat="expiryList in expiryTrucks" style="text-align: center;">
-                    <td data-title="'Registration No'" sortable="'registrationNo'" class="clickable-item col-sm-2">
-                        {{expiryList.registrationNo }}
-                    </td>
-                    <td data-title="'Fitness Expiry'" sortable="'fitnessExpiry'" class="clickable-item col-sm-2">
-                        {{ expiryList.fitnessExpiry | date:'MM-dd-yyyy'}}
-                    </td>
-                    <td data-title="'Permit Expiry'" sortable="'permitExpiry'" class="clickable-item col-sm-2">
-                        {{ expiryList.permitExpiry | date:'MM-dd-yyyy'}}
-                    </td>
-                    <td data-title="'Tax Expiry'" sortable="'taxExpiry'" class="clickable-item col-sm-2">
-                        {{ expiryList.taxDueDate | date:'MM-dd-yyyy'}}
-                    </td>
-                    <td data-title="'Insurance Expiry'" sortable="'insuranceExpiry'" class="clickable-item col-sm-2">
-                        {{ expiryList.insuranceExpiry | date:'MM-dd-yyyy'}}
-                    </td>
-                    <td data-title="'Pollution Expiry'" sortable="'pollutionExpiry'" class="clickable-item col-sm-2">
-                        {{ expiryList.pollutionExpiry | date:'MM-dd-yyyy'}}
-                    </td>
-                </tr>
-                <tr ng-if="!expiryTrucks || expiryTrucks.length === 0">
-                    <td colspan="8">No Payments Records exist.</td>
-                </tr>
-            </table>
+                <li class="col-xs-2">
+                    <button type="button" class="btn mailImage"><img src="images/Reports_Download.png"></button>
+                </li>
+            </ul>
+            <ul class="list-inline mailDownload">
+
+            </ul>
         </div>
+    </div>
+
+    <table class="table table-bordered table-striped table-condensed table-hover" ng-table="paymentsParams">
+        <tr ng-repeat="expiryList in expiryTrucks" style="text-align: center;">
+            <td data-title="'Registration No'" sortable="'registrationNo'" class="clickable-item col-sm-2">
+                {{expiryList.registrationNo }}
+            </td>
+            <td data-title="'Fitness Expiry'" sortable="'fitnessExpiry'" class="clickable-item col-sm-2">
+                {{ expiryList.fitnessExpiry | date:'MM-dd-yyyy'}}
+            </td>
+            <td data-title="'Permit Expiry'" sortable="'permitExpiry'" class="clickable-item col-sm-2">
+                {{ expiryList.permitExpiry | date:'MM-dd-yyyy'}}
+            </td>
+            <td data-title="'Tax Expiry'" sortable="'taxExpiry'" class="clickable-item col-sm-2">
+                {{ expiryList.taxDueDate | date:'MM-dd-yyyy'}}
+            </td>
+            <td data-title="'Insurance Expiry'" sortable="'insuranceExpiry'" class="clickable-item col-sm-2">
+                {{ expiryList.insuranceExpiry | date:'MM-dd-yyyy'}}
+            </td>
+            <td data-title="'Pollution Expiry'" sortable="'pollutionExpiry'" class="clickable-item col-sm-2">
+                {{ expiryList.pollutionExpiry | date:'MM-dd-yyyy'}}
+            </td>
+        </tr>
+        <tr ng-if="!expiryTrucks || expiryTrucks.length === 0">
+            <td colspan="8">No Payments Records exist.</td>
+        </tr>
+    </table>
+</div>
