--- a/client/views/partials/drivers/edit-driver.html
+++ b/client/views/partials/drivers/edit-driver.html
@@ -50,7 +50,6 @@
                 </div>
 
                 <div class="form-group col-xs-12">
-
                     <div class="col-xs-12">
                         <input ng-model="driver.salary" type="number" class="form-control custom-form-control"
                                id="salary"
@@ -60,8 +59,15 @@
 
 
                 <div class="form-group col-xs-12">
-                    <label class="col-sm-4">Driver Status</label>
-                    <div class="col-sm-8"><input type="checkbox" ng-model="driver.isActive"></div>
+                    <div class="erp-gps col-xs-6">
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" ng-model="driver.isActive">
+                                <span class="cr"><i class="cr-icon fa fa-check"></i></span>
+                               Driver Status
+                            </label>
+                        </div>
+                    </div>
                 </div>
 
             </div>
