--- a/client/views/partials/ExpenseMaster/expense-master.html
+++ b/client/views/partials/ExpenseMaster/expense-master.html
@@ -20,9 +20,9 @@
                     </select>
                 </div>
             </div>
-         <!--   <div class="toolbar-button-div pull-right">
+           <div class="toolbar-button-div pull-right">
                 <button class="btn  btn-blue pull-right mb-10" ng-click="goToEditExpenseTypePage()">Add Expense Type</button>
-            </div>-->
+            </div>
 
 
             <table class="table table-bordered table-striped table-condensed table-hover text-center" ng-table="expenseMasterParams" >
