--- a/client/views/templates/revenueByVehicle.html
+++ b/client/views/templates/revenueByVehicle.html
@@ -1,5 +1,5 @@
 
-<div class="main-temp col-xs-12 mt-20">
+<div class="main-temp col-xs-12 mt-20" ng-init="getRevenueByVehicle();getAllTrucks();">
     <div class="col-xs-12 pall-zero db-expenses">
         <div class="col-xs-3 pall-zero"><p>Total Revenue</p></div>
         <div class="col-xs-9 pall-zero">
@@ -13,19 +13,21 @@
                 </li>
                 <li class="col-xs-3 pall-zero pos-relative">
                     <span class="bot-arrow"><i class="fa fa-angle-down" aria-hidden="true"></i></span>
-                    <input type="text" ng-model="filters.regNumber"
-                           uib-typeahead="totalExpensesbyVehicle.regNumber for totalExpensesbyVehicle in totalExpensesbyVehicle | filter:$viewValue"
-                           class="form-control textfield" typeahead-min-length="1"
-                           typeahead-on-select="selectTruckId($item)"
-                           typeahead-select-on-exact="true" placeholder="Registration Num"
-                           typeahead-no-results="noTrucks" autocomplete="false">
+                    <input type="text" ng-model="filters.regNumber" 
+                    uib-typeahead="truck.registrationNo for truck in trucksList | filter:$viewValue"
+                    class="form-control textfield" typeahead-min-length="1"
+                    typeahead-on-select="selectTruckId($item)"
+                    ng-change="resetTruckName();"
+                    typeahead-select-on-exact="true" placeholder="Registration Num"
+                    typeahead-no-results="noTruck" autocomplete="false">
+                   
                     <div ng-show="noTrucks">
                         <i class="glyphicon glyphicon-remove red"></i>
                         <span class="red"> No Results Found </span>
                     </div>
                 </li>
                 <li class="col-xs-1">
-                    <button ng-click="validateFilters()" type="button" class="btn go">Go</button>
+                    <button ng-click="validateFilters('revenue')" type="button" class="btn go">Go</button>
                 </li>
             </ul>
             <ul class="list-inline mailDownload">
